hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_mismatch6.php.exp
File "explicit_type_collection_mismatch6.php", line 4, characters 8-39:
Incompatible field values (Typing[4110])
File "explicit_type_collection_mismatch6.php", line 4, characters 23-25:
Expected int
File "explicit_type_collection_mismatch6.php", line 4, characters 33-38:
But got string
